--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="pt-BR">
 
   <head>
-    <title>Jorge Santos</title>
+    <title>Gabrielle Fecury Vinagre</title>
     
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,14 +33,14 @@
           <div class="w3-white w3-text-grey w3-card-4">
             <!-- @falvojr: This container has been modified to not use a profile picture. -->
             <div class="w3-container">
-              <h2>José Jorge Magalhães Santos</h2>
+              <h2>Gabrielle Fecury Vinagre</h2>
             </div>
             <div class="w3-container">
               <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Técnico Especializado III</p>
               <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Estudante de Desenvolvimento Front-End</p>
-              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Santo Amaro - Ba</p>
-              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>jorgesantos.xp@gmail.com</p>
-              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>(71) 98718-6497</p>
+              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Belém-PA, Brasil</p>
+              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>gabrielleflv@gmail.com</p>
+              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>(91) 99166-9907</p>
               <hr>
   
               <p class="w3-large">
@@ -48,20 +48,23 @@
               </p>
               <p>HTML</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:40%">40%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
               </div>
               <p>CSS</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:40%">40%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
               </div>
               <p>Javascript</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:30%">30%</div>
               </div>
-              <p>TODO</p>
+              <p>Git e GitHub</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
               </div>
+              <p>Nuvem AWS</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
               <br>
   
               <p class="w3-large w3-text-theme">
@@ -69,15 +72,15 @@
               </p>
               <p>Português</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:50%"></div>
+                <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
               </div>
-              <p>TODO</p>
+              <p>inglês</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:50%"></div>
+                <div class="w3-round-xlarge w3-teal" style="height:24px;width:70%"></div>
               </div>
-              <p>TODO</p>
+              <p>Francês</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:50%"></div>
+                <div class="w3-round-xlarge w3-teal" style="height:24px;width:60%"></div>
               </div>
               <br>
             </div>
