--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
             <div class="w3-container">
               <h2>Gabrielle Fecury Vinagre</h2>
             </div>
-            <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Técnico Especializado III</p>
+            <div class="w3-container"></div>
               <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Estudante de Desenvolvimento Front-End</p>
               <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Belém-PA, Brasil</p>
               <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>gabrielleflv@gmail.com</p>
@@ -52,11 +51,11 @@
               </div>
               <p>CSS</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
               </div>
               <p>Javascript</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:30%">30%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:25%">25%</div>
               </div>
               <p>Git e GitHub</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
@@ -93,34 +92,11 @@
         <div class="w3-twothird">
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
-            <p>Gostaria de trabalhar onde a minha experiência de 31 anos, possa contribuir com o
-              desenvolvimento da empresa, agregando valores e trocando informações que me permitam
-              aperfeiçoamento profissional, utilizando de minhas habilidades técnicas.</p>
-          </div>
-
-          <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
-            </h2>
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>Petrobras Biocombustível - Prestação de Serviços pela Kempetro Engenharia</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro de 2019 - <span class="w3-tag w3-teal w3-round">Aual</span></h6>
-              <p>Fiscal de campo de contrato; Função de líder de equipe no setor da balança e faturamento na usina de biodiesel em candeias; Faturamento de notas fiscais para expedição de B100 (Biodiesel) e produtos especiais; Tratamento 
-                das notas fiscais de matérias primas e insumos recebidos, entrada de mercadoria (MIGO) no 
-                sistema SAP/R3; Controle de entrada, saída e pesagem de carretas; Atuando na automatização de 
-                processos SAP-Excel; Executar serviços de apoio nas áreas de recursos de administração, 
-                finanças e logística; Atendimento de fornecedores e clientes interno e externo, fornecendo e 
-                recebendo informações sobre produtos e serviços; Tratamento de documentos variados, cumprindo 
-                todo o procedimento necessário referente aos mesmos; Arquivamento de documentos;</p>
-              <hr>
+            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Resumo Profissional</h2>
+            <p>Sou uma pessoa dinâmica, que prefere trabalhar com entregáveis e syncs pautados na metodologia Ágil, 
+              bem como possuo boa comunicação e triangulação entre times.
+               Atualmente, tenho me desenvolvido como desenvolvedora front-end (HTML, JavaScript e CSS).</p>
             </div>
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
-            </div>
-          </div>
   
           <div class="w3-container w3-card w3-white">
             <h2 class="w3-text-grey w3-padding-16">
@@ -135,16 +111,23 @@
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="https://www.dio.me/certificate/6213111D" target="_blank">Curso: TQI Fullstack Developer (125h)</a></li>
-                <li><a href="https://www.dio.me/certificate/72361F24" target="_blank">Curso: Formação HTML Web Developer (21h)</a></li>
-                <li><a href="https://www.dio.me/certificate/64CE8868" target="_blank">Curso: Formação CSS Web Developer (46h)</a></li>
+                <li><a href="https://www.dio.me/certificate/05536674" target="_blank">Curso: Entendendo Comunicação Client x Server</a></li>
+                <li><a href="https://www.dio.me/certificate/56F61735" target="_blank">Curso: Introdução ao Desenvolvimento Moderno de Software</a></li> 
+                <li><a href="https://www.dio.me/certificate/650D72A1" target="_blank">Curso: Descubra a Nuvem AWS - Nexa Resources</a></li>
+                <li><a href="https://www.dio.me/certificate/C1E7BC9E" target="_blank">Curso: Primeiros Passos com HTML</a></li>
+                <li><a href="https://www.dio.me/certificate/53623866" target="_blank">Curso: Trabalhando com Formulários em HTML</a></li>
+                <li><a href="https://www.dio.me/certificate/F1AD5658" target="_blank">Curso: Criando Tabelas com HTML</a></li>
+                <li><a href="https://www.dio.me/certificate/E1FEEC88" target="_blank">Curso: Entendendo HTML Semântico</a></li>
+                <li><a href="https://www.dio.me/certificate/9508D785" target="_blank">Curso: HTML: Recursos Especiais</a></li>
+                <li><a href="https://www.dio.me/certificate/3A3D5843" target="_blank">Curso: Versionamento de Código com Git e GitHub</a></li>
+                <li><a href="https://www.dio.me/certificate/8294E2FE" target="_blank">Curso: Fundamentos do CSS</a></li>
               </ul>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Centro Educacional Teodoro Sampaio</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1993 - 1995</h6>
-              <p>Técnico em Contabilidade</p>
+              <h5 class="w3-opacity"><b>FACI WYDEN</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2023 - Dezembro 2025</h6>
+              <p>Análise e Desenvolvimento de Sistemas</p>
             </div>
           </div>
 
