--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <h2>Gabrielle Fecury Vinagre</h2>
             </div>
             <div class="w3-container"></div>
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Estudante de Desenvolvimento Front-End</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Análise e Desenvolvimento de Sistemas</p>
               <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Belém-PA, Brasil</p>
               <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>gabrielleflv@gmail.com</p>
               <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>(91) 99166-9907</p>
@@ -104,7 +104,6 @@
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
               <p>
                 Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
@@ -138,19 +137,10 @@
             <div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="LINK_GITHUB" target="_blank">USUARIO_GITHUB/REPO</a>
+                <a href="https://github.com/gabriellefecury" target="_blank">gabriellefecury</a>
               </h6>
-              <p>TODO</p>
               <hr>
-            </div>
-            <div class="w3-container">
-              <h6 class="w3-text-teal">
-                <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
-                <a href="LINK_GITLAB" target="_blank">USUARIO_GITLAB/REPO</a>
-              </h6>
-              <p>TODO</p>
-            </div>
-          </div>
+        
   
           <!-- End Right Column -->
         </div>
@@ -163,8 +153,7 @@
   
     <footer class="w3-container w3-teal w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
-      <a href="https://github.com/JorgeSantosxp" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-      <a href="https://www.linkedin.com/in/jorge-santos-41774793" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      <a href="https://www.linkedin.com/in/gabriellefecury/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
