--- a/index.html
+++ b/index.html
@@ -36,50 +36,50 @@
               <h2>Gabrielle Fecury Vinagre</h2>
             </div>
             <div class="w3-container"></div>
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Análise e Desenvolvimento de Sistemas</p>
-              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Belém-PA, Brasil</p>
-              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>gabrielleflv@gmail.com</p>
-              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>(91) 99166-9907</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-cyan"></i>Análise e Desenvolvimento de Sistemas</p>
+              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-cyan"></i>Belém-PA, Brasil</p>
+              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-cyan"></i>gabrielleflv@gmail.com</p>
+              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-cyan"></i>(91) 99166-9907</p>
               <hr>
   
               <p class="w3-large">
-                <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b>
+                <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-cyan"></i>Skills</b>
               </p>
               <p>HTML</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-cyan" style="width:100%">100%</div>
               </div>
               <p>CSS</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-cyan" style="width:60%">60%</div>
               </div>
               <p>Javascript</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:25%">25%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-cyan" style="width:25%">25%</div>
               </div>
               <p>Git e GitHub</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-cyan" style="width:70%">70%</div>
               </div>
               <p>Nuvem AWS</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-cyan" style="width:70%">70%</div>
               <br>
   
               <p class="w3-large w3-text-theme">
-                <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Idiomas</b>
+                <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-cyan"></i>Idiomas</b>
               </p>
               <p>Português</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
+                <div class="w3-round-xlarge w3-cyan" style="height:24px;width:100%"></div>
               </div>
               <p>inglês</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:70%"></div>
+                <div class="w3-round-xlarge w3-cyan" style="height:24px;width:70%"></div>
               </div>
               <p>Francês</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:60%"></div>
+                <div class="w3-round-xlarge w3-cyan" style="height:24px;width:60%"></div>
               </div>
               <br>
             </div>
@@ -92,7 +92,7 @@
         <div class="w3-twothird">
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Resumo Profissional</h2>
+            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-cyan"></i>Resumo Profissional</h2>
             <p>Sou uma pessoa dinâmica, que prefere trabalhar com entregáveis e syncs pautados na metodologia Ágil, 
               bem como possuo boa comunicação e triangulação entre times.
                Atualmente, tenho me desenvolvido como desenvolvedora front-end (HTML, JavaScript e CSS).</p>
@@ -100,7 +100,7 @@
   
           <div class="w3-container w3-card w3-white">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Educação
+              <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-cyan"></i>Educação
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
@@ -125,17 +125,17 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>FACI WYDEN</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2023 - Dezembro 2025</h6>
+              <h6 class="w3-text-cyan"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2023 - Dezembro 2025</h6>
               <p>Análise e Desenvolvimento de Sistemas</p>
             </div>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Projetos
+              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-cyan"></i>Projetos
             </h2>
             <div class="w3-container">
-              <h6 class="w3-text-teal">
+              <h6 class="w3-text-cyan">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
                 <a href="https://github.com/gabriellefecury" target="_blank">gabriellefecury</a>
               </h6>
@@ -151,7 +151,7 @@
       <!-- End Page Container -->
     </div>
   
-    <footer class="w3-container w3-teal w3-center w3-margin-top">
+    <footer class="w3-container w3-cyan w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
       <a href="https://www.linkedin.com/in/gabriellefecury/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
